[gd_scene load_steps=3 format=3 uid="uid://7hcurh5irjb1"]

[ext_resource type="Script" path="res://scenes/menu/Pause_menu/pause_menu.gd" id="1_rh0r8"]
[ext_resource type="FontFile" uid="uid://cqv8ewgtl1j8b" path="res://art/fonts/Pixelify/static/PixelifySans-Bold.ttf" id="2_adxth"]

[node name="pause_menu" type="CanvasLayer"]
script = ExtResource("1_rh0r8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(800, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.5
offset_top = -76.0
offset_right = 91.5
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="depause" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_adxth")
theme_override_font_sizes/font_size = 50
text = "depause"

[node name="Options" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_adxth")
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Restart" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_adxth")
theme_override_font_sizes/font_size = 50
text = "restart
"

[node name="menuButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_adxth")
theme_override_font_sizes/font_size = 50
text = "Go to the menu"

[connection signal="pressed" from="VBoxContainer/depause" to="." method="_on_depause_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/menuButton" to="." method="_on_menu_button_pressed"]
